--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Pratik Yadav",
   "license": "ISC",
+  "engines": {
+    "node": "17.3.0"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
