--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-URI=mongodb+srv://pratikydv:fltltpys1@cluster0.oasxg.mongodb.net/edemo?retryWrites=true&w=majority
+URI=mongodb+srv://pratikydv:bfjbdj@cluster0.oasxg.mongodb.net/edemo?retryWrites=true&w=majority
